--- a/app/views/instance_admin/manage/transactable_types/_form.html.haml
+++ b/app/views/instance_admin/manage/transactable_types/_form.html.haml
@@ -95,5 +95,7 @@
   - if resource.persisted?
     .content-container
       %h4 Bulk Upload CSV Fields
+      %p.help_block
+        = "* #{ t('simple_form.hints.transactable_type.bulk_upload_csv_fields') }"
       .row
-        = render partial: "instance_admin/data_uploads/custom_csv_fields", locals: { f: f }
+        = render partial: 'instance_admin/data_uploads/custom_csv_fields', locals: { f: f }
