NM-5800 No details to show for this order

--- a/app/views/instance_admin/manage/orders/show.html.haml
+++ b/app/views/instance_admin/manage/orders/show.html.haml
@@ -71,4 +71,8 @@
           %tr
             %th.total= t 'buy_sell_market.checkout.labels.total2'
             %td.total= render_money @order.total_amount
+  - else
+    .row
+      .text-container.col-xs-12
+        = t('instance_admin.manage.orders.no_details')
 
